tests/fixtures/syntax/valid/comment_marker_in_action_command.repor
case "comment marker in action command" {
  $ echo hello // passed to shell
  assert {
    exit 0
  }
}
