tests/fixtures/syntax/invalid/infix_logical_operator_not_supported.repor
case "infix logical operator not supported" {
  $ true
  assert {
    exit 0 and exit 0
  }
}
